--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Aul6 - Git e Github</title>
 </head>
 <body>
-    
+    <!--HEADER-->
+    <header>
+        <div class="logo">LOGO</div>
+        <nav>
+            <ul>
+            <li><a href="">Início</a>
+            </li>
+            <li><a href="">Sobre</a>
+            </li>
+            <li><a href="">Contato</a>
+            </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
