--- a/index.html
+++ b/index.html
@@ -20,5 +20,23 @@
             </ul>
         </nav>
     </header>
+    <section id="Banners">
+
+    </section>
+    <section id="Depoimentos">
+
+    </section>
+    <section id="Vantagens">
+
+    </section>
+    <section id="Dúvidas">
+
+    </section>
+    <section id="Parceiros">
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
